# libtess2-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: lib.rs  libtess2.rs  tests.rs
